--- a/system/kube-proxy/values.yaml
+++ b/system/kube-proxy/values.yaml
@@ -9,3 +9,10 @@ kubernetes:
 
 selector:   true 
 toleration: true 
+
+parrot:
+  enabled: true
+  # as: 1234
+  image: 
+    repository: sapcc/kube-plucked-parrot
+    tag: v201909171212
