--- a/system/kube-proxy/values.yaml
+++ b/system/kube-proxy/values.yaml
@@ -1,18 +1,24 @@
-image:
-  repository: sapcc/hyperkube
-  tag: v1.8.15.cniplugins-v0.7.6
-
-kubernetes:
-  version: v1.8.15
-  server: https://qa-de-1-c67f19d507d543a3a9eaa3607729826f.kubernikus-v.qa-de-1.cloud.sap
-  clusterCIDR: 100.64.0.0/10
-
 selector:   true 
 toleration: true 
 
-parrot:
-  enabled: true
-  # as: 1234
-  image: 
+images:
+  proxy:
+    repository: sapcc/hyperkube
+    tag: v1.8.15.cniplugins-v0.7.6
+  parrot:
     repository: sapcc/kube-plucked-parrot
     tag: v201909171212
+  externalip:
+    repository: sapcc/kube-plucked-parrot
+    tag: v20190917121
+
+sidecars:
+  parrot:     true
+  externalip: true
+
+proxy:
+# server: https://qa-de-1-c67f19d507d543a3a9eaa3607729826f.kubernikus-v.qa-de-1.cloud.sap
+  clusterCIDR: 100.64.0.0/10
+
+parrot:
+# as: 12345
