--- a/system/kube-proxy/templates/configmap.yaml
+++ b/system/kube-proxy/templates/configmap.yaml
@@ -12,7 +12,7 @@ data:
     clusters:
     - cluster:
         certificate-authority: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-        server: {{ required ".Values.kubernetes.server missing" .Values.kubernetes.server }}
+        server: {{ required ".Values.proxy.server missing" .Values.proxy.server }}
       name: default
     contexts:
     - context:
@@ -37,7 +37,7 @@ data:
       contentType: application/vnd.kubernetes.protobuf
       kubeconfig: /var/lib/kube-proxy/kubeconfig
       qps: 5
-    clusterCIDR: {{ required ".Values.kubernetes.clusterCIDR missing" .Values.kubernetes.clusterCIDR }}
+    clusterCIDR: {{ required ".Values.proxy.clusterCIDR missing" .Values.proxy.clusterCIDR }}
     configSyncPeriod: 15m0s
     conntrack:
       max: 0
