fix values missmatch

--- a/system/kube-proxy/templates/daemonset.yaml
+++ b/system/kube-proxy/templates/daemonset.yaml
@@ -59,7 +59,7 @@ spec:
           - mountPath: /lib/modules
             name: lib-modules
             readOnly: true
-{{- if .Values.sidecars.parrot.enabled }}
+{{- if .Values.sidecars.parrot }}
       - name: parrot
         image: "{{ .Values.images.parrot.repository }}:{{ .Values.images.parrot.tag }}"
         imagePullPolicy: IfNotPresent
