--- a/system/kube-system/values.yaml
+++ b/system/kube-system/values.yaml
@@ -3,7 +3,10 @@ disco:
   enabled: false
 
 kube-proxy:
-  enabled: false
+  images:
+    proxy: 
+      repository: sapcc/hyperkube
+      tag: v1.8.15.cniplugins-v0.7.6
 
 # ingress related but independent values
 ingress:
