fixed database type selector without impacting either one and with support for having both database types running in parallel

--- a/openstack/keystone/templates/deployment-api.yaml
+++ b/openstack/keystone/templates/deployment-api.yaml
@@ -84,10 +84,10 @@ spec:
   {{- end }}
 {{- end }}
         - name: DEPENDENCY_SERVICE
-{{- if .Values.postgresql.enabled }}
+{{- if eq .Values.global.database "postgres" }}
           value: {{ .Release.Name }}-postgresql,{{ .Release.Name }}-memcached
 {{- end }}
-{{- if .Values.mariadb.enabled }}
+{{- if eq .Values.global.database "mariadb" }}
           value: {{ .Release.Name }}-mariadb,{{ .Release.Name }}-memcached
 {{- end }}
         - name: COMMAND
