--- a/openstack/keystone/templates/job-migration.yaml
+++ b/openstack/keystone/templates/job-migration.yaml
@@ -42,10 +42,10 @@ spec:
             - name: NAMESPACE
               value: {{ .Release.Namespace }}
             - name: DEPENDENCY_SERVICE
-{{- if .Values.postgresql.enabled }}
+{{- if eq .Values.global.database "postgres" }}
               value: {{ .Release.Name }}-postgresql
 {{- end }}
-{{- if .Values.mariadb.enabled }}
+{{- if eq .Values.global.database "mariadb" }}
               value: {{ .Release.Name }}-mariadb
 {{- end }}
             {{- if .Values.sentry.enabled }}
