--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -10,6 +10,7 @@ global:
   dbUser: keystone
   dbPassword: ""
 # imageRegistry: hub.global.cloud.sap
+  database: postgres
 
 debug: false
 insecure_debug: false
@@ -250,7 +251,8 @@ mariadb:
   enabled: false
   name: keystone
   initdb_configmap: keystone-initdb
-  persistence_claim: db-keystone-pvclaim
+  persistence_claim:
+    name: db-keystone-pvclaim
 
 mysql_metrics:
   db_name: keystone
