--- a/openstack/keystone/templates/deployment-cron.yaml
+++ b/openstack/keystone/templates/deployment-cron.yaml
@@ -53,10 +53,10 @@ spec:
   {{- end }}
 {{- end }}
         - name: DEPENDENCY_SERVICE
-{{- if .Values.postgresql.enabled }}
+{{- if eq .Values.global.database "postgres" }}
           value: {{ .Release.Name }}-postgresql
 {{- end }}
-{{- if .Values.mariadb.enabled }}
+{{- if eq .Values.global.database "mariadb" }}
           value: {{ .Release.Name }}-mariadb
 {{- end }}
         - name: COMMAND
