[netapp-cap-exporter] add to infra-monitoring requirements

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -17,6 +17,12 @@ dependencies:
     version: 0.0.1
     condition: netapp_exporter.enabled
 
+  - name: netapp-cap-exporter
+    alias: netapp_cap_exporter
+    repository: file://vendor/netapp-cap-exporter
+    version: 0.0.1
+    condition: netapp_cap_exporter.enabled
+
   - name: netapp-perf-exporter
     alias: netapp_perf_exporter
     repository: file://vendor/netapp-perf-exporter
