--- a/system/kube-proxy/values.yaml
+++ b/system/kube-proxy/values.yaml
@@ -7,10 +7,10 @@ images:
     tag: v1.8.15.cniplugins-v0.7.6
   parrot:
     repository: sapcc/kube-plucked-parrot
-    tag: v201909171440
+    tag: v201909171613
   externalip:
     repository: sapcc/kube-plucked-parrot
-    tag: v20190917121
+    tag: v201909171613
 
 sidecars:
   parrot:     true
@@ -22,3 +22,6 @@ proxy:
 
 parrot: 
   as: 12345
+
+externalip:
+#  ignoreaddress: 
