--- a/system/kube-proxy/values.yaml
+++ b/system/kube-proxy/values.yaml
@@ -20,8 +20,8 @@ proxy:
 # server: https://qa-de-1-c67f19d507d543a3a9eaa3607729826f.kubernikus-v.qa-de-1.cloud.sap
   clusterCIDR: 100.64.0.0/10
 
-parrot: 
-  as: 12345
+parrot: {}
+# as: 12345
 
-externalip:
+externalip: {}
 #  ignoreaddress: 
