pull correct externalip

--- a/system/kube-proxy/values.yaml
+++ b/system/kube-proxy/values.yaml
@@ -9,8 +9,8 @@ images:
     repository: sapcc/kube-plucked-parrot
     tag: v201909171613
   externalip:
-    repository: sapcc/kube-plucked-parrot
-    tag: v201909171613
+    repository: sapcc/kube-externalip
+    tag: 0.3.1
 
 sidecars:
   parrot:     true
