--- a/system/kube-proxy/values.yaml
+++ b/system/kube-proxy/values.yaml
@@ -11,10 +11,14 @@ images:
   externalip:
     repository: sapcc/kube-externalip
     tag: 0.3.1
+  nanny:
+    repository: sapcc/k8s-conntrack-nanny
+    tag: 0.1.0
 
 sidecars:
   parrot:     true
   externalip: true
+  nanny:      true
 
 proxy:
 # server: https://qa-de-1-c67f19d507d543a3a9eaa3607729826f.kubernikus-v.qa-de-1.cloud.sap
