-- add missing kubeconfig value

--- a/system/kube-flannel/templates/daemonset.yaml
+++ b/system/kube-flannel/templates/daemonset.yaml
@@ -28,7 +28,7 @@ spec:
           - "--ip-masq"
           - "--kube-subnet-mgr"
           - "--iface=$(POD_IP)"
-          - "-kubeconfig-file={{ .Values.global.kubeConfig }}"
+          - "-kubeconfig-file={{ .Values.kubeConfig }}"
         securityContext:
           privileged: true
         env:
