--- a/system/wormhole/templates/daemonset.yaml
+++ b/system/wormhole/templates/daemonset.yaml
@@ -22,7 +22,7 @@ spec:
         command:
         - "sh"
         - "-c"
-        - "wormhole client --listen {{ .Values.interface.ipAddress }}:{{ .Values.interface.port }} --kubeconfig={{ .Values.global.kubeConfig }}"
+        - "wormhole client --listen {{ .Values.interface.ipAddress }}:{{ .Values.interface.port }} --kubeconfig={{ .Values.kubeConfig }}"
         volumeMounts:
           - mountPath: /etc/kubernetes
             name: etc-kubernetes
