rbac for kube-parrot

--- a/system/kube-proxy/templates/daemonset.yaml
+++ b/system/kube-proxy/templates/daemonset.yaml
@@ -87,7 +87,7 @@ spec:
 {{- if .Values.externalip.ignoreaddress }}
           - --ignore-address={{ .Values.externalip.ignoreaddress}} 
 {{- end }}}
-          - --source-address=${HOST_IP} 
+          - --source-address=$(HOST_IP) 
           - --interface=dummy0 
           - --logtostderr 
         env: 
