--- a/system/kube-proxy/values.yaml
+++ b/system/kube-proxy/values.yaml
@@ -13,7 +13,7 @@ images:
     tag: 0.3.1
   nanny:
     repository: sapcc/k8s-conntrack-nanny
-    tag: 0.1.0
+    tag: v0.1.0
 
 sidecars:
   parrot:     true
