fix syntax errors

--- a/system/kube-proxy/templates/daemonset.yaml
+++ b/system/kube-proxy/templates/daemonset.yaml
@@ -86,7 +86,7 @@ spec:
           - /externalip 
 {{- if .Values.externalip.ignoreaddress }}
           - --ignore-address={{ .Values.externalip.ignoreaddress}} 
-{{- end }}}
+{{- end }}
           - --source-address=$(HOST_IP) 
           - --interface=dummy0 
           - --logtostderr 
