--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -144,6 +144,11 @@ vspc:
     accessMode: ReadWriteMany
     size: 10Gi
 
+
+# I would move all that to the neutron deployment
+neutron: {}
+neutron_dvs_agent_enabled: true
+
 cross_az_attach: 'False'
 
 api:
