--- a/openstack/neutron/templates/daemonset-metadata-agent.yaml
+++ b/openstack/neutron/templates/daemonset-metadata-agent.yaml
@@ -55,7 +55,7 @@ spec:
             requests:
               cpu: "250m"
               memory: "256Mi"
-            limits:
+            limit:
               cpu: "500m"
               memory: "512Mi"
           volumeMounts:
