--- a/system/kube-system-virtual/values.yaml
+++ b/system/kube-system-virtual/values.yaml
@@ -4,6 +4,9 @@ kube-proxy:
     proxy: 
       repository: sapcc/hyperkube
       tag: v1.8.15.cniplugins-v0.7.6
+  proxy:
+    clusterCIDR: 10.180.0.0/17
+
   sidecars:
     parrot:     false
     externalip: false
