--- a/system/kube-system-virtual/values.yaml
+++ b/system/kube-system-virtual/values.yaml
@@ -1,3 +1,7 @@
+container-linux-update-orchestrator:
+  rbac:
+    create: true
+
 kube-proxy:
   enabled: true
   images:
@@ -12,15 +16,15 @@ kube-proxy:
     externalip: false
     nanny:      false
 
-metallb:
-  enabled: true
-
 kube-flannel:
   enabled: true
   image:
     repository: quay.io/coreos/flannel
     tag: v0.11.0-amd64
   kubeConfig: /etc/kubernetes/kubelet/kubeconfig
+
+metallb:
+  enabled: true
 
 wormhole:
   enabled: true
