-- kube-proxy for all nodes

--- a/system/kube-system-virtual/values.yaml
+++ b/system/kube-system-virtual/values.yaml
@@ -4,6 +4,8 @@ container-linux-update-orchestrator:
 
 kube-proxy:
   enabled: true
+  selector:   false
+  toleration: false
   images:
     proxy: 
       repository: sapcc/hyperkube
