--- a/system/kube-proxy/templates/configmap.yaml
+++ b/system/kube-proxy/templates/configmap.yaml
@@ -26,7 +26,11 @@ data:
       user:
         tokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
   config: |-
+{{- if (semverCompare ">= 1.9-0" .Capabilities.KubeVersion.GitVersion) }} 
+    apiVersion: kubeproxy.config.k8s.io/v1alpha1
+{{- else }}
     apiVersion: componentconfig/v1alpha1
+{{- end }}
     kind: KubeProxyConfiguration
     bindAddress: 0.0.0.0
     healthzBindAddress: 0.0.0.0:10256
@@ -46,7 +50,11 @@ data:
       tcpCloseWaitTimeout: 1h0m0s
       tcpEstablishedTimeout: 24h0m0s
     enableProfiling: false
+{{- if (semverCompare ">= 1.9-0" .Capabilities.KubeVersion.GitVersion) }} 
+    featureGates: {}
+{{- else }}
     featureGates: ""
+{{- end }}
     iptables:
       masqueradeAll: false
       masqueradeBit: 14
