--- a/system/kube-system-virtual/values.yaml
+++ b/system/kube-system-virtual/values.yaml
@@ -9,7 +9,7 @@ kube-proxy:
   images:
     proxy: 
       repository: sapcc/hyperkube
-      tag: v1.8.15.cniplugins-v0.7.6
+      tag: v1.15.2
   proxy:
     clusterCIDR: 10.180.0.0/17
 
