--- a/system/kube-system/requirements.yaml
+++ b/system/kube-system/requirements.yaml
@@ -41,3 +41,7 @@ dependencies:
     repository: https://charts.eu-de-2.cloud.sap
     version: 0.4.5
     condition: kube-proxy.enabled
+
+  - name: kubernikus-rbac
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 1.0.0
