[grafana] add yet unmentioned values

--- a/openstack/grafanasix/values.yaml
+++ b/openstack/grafanasix/values.yaml
@@ -1,3 +1,30 @@
+global:
+  region: '@/cc/secrets'
+  domain: '@/cc/secrets'
+
+ldap:
+  host: '@/cc/secrets'
+  port: 636
+  ssl: true
+  ssl_skip_verify: false
+  password: '@/cc/secrets'
+  suffix: '@/cc/secrets'
+  bind_dn: '@/cc/secrets'
+  filter: '@/cc/secrets'
+  group_search_base_dns: '@/cc/secrets'
+  search_filter: '@/cc/secrets'
+  search_base_dbs: '@/cc/secrets'
+  members: '@/cc/secrets'
+  monitoring_user: '@/cc/secrets'
+  monitoring_editor: '@/cc/secrets'
+  monitoring_admin: '@/cc/secrets'
+
+alertmanager:
+  password: '@/cc/secrets'
+
+image:
+  pullPolicy: IfNotPresent
+
 grafana:
   vice_president: true
   disco: true
