--- a/system/kube-proxy/templates/configmap-kube-proxy.yaml
+++ b/system/kube-proxy/templates/configmap-kube-proxy.yaml
@@ -41,7 +41,7 @@ data:
       contentType: application/vnd.kubernetes.protobuf
       kubeconfig: /var/lib/kube-proxy/kubeconfig
       qps: 5
-    clusterCIDR: {{ required ".Values.proxy.clusterCIDR missing" .Values.proxy.clusterCIDR }}
+    clusterCIDR: {{ required ".Values.clusterCIDR missing" .Values.clusterCIDR }}
     configSyncPeriod: 15m0s
     conntrack:
       max: 0
