--- a/system/kube-proxy/templates/daemonset.yaml
+++ b/system/kube-proxy/templates/daemonset.yaml
@@ -114,6 +114,17 @@ spec:
             add:
             - NET_ADMIN
 {{- end }}
+{{- if .Values.sidecars.ipmasq }}
+      - name: ipmasq
+        image: "{{ .Values.images.ipmasq.repository }}:{{ .Values.images.ipmasq.tag }}"
+        securityContext:
+          privileged: false
+          capabilities:
+            add: ["NET_ADMIN", "NET_RAW"]
+        volumeMounts:
+          - name: ipmasq
+            mountPath: /etc/config
+{{- end }}
       hostNetwork: true
       nodeSelector:
         beta.kubernetes.io/os: linux
@@ -134,6 +145,9 @@ spec:
         - name: kube-proxy
           configMap:
             name: kube-proxy
+        - name: ipmasq
+          configMap:
+            name: ipmasq
         - name: xtables-lock
           hostPath:
             path: /run/xtables.lock
