--- a/system/kube-proxy/values.yaml
+++ b/system/kube-proxy/values.yaml
@@ -14,15 +14,20 @@ images:
   nanny:
     repository: sapcc/k8s-conntrack-nanny
     tag: v0.1.0
+  ipmasq:
+    repository: sapcc/ip-masq-agent-amd64
+    tag: v2.0.0 
 
 sidecars:
   parrot:     true
   externalip: true
   nanny:      true
+  ipmasq:     true
+
+clusterCIDR: 100.64.0.0/10
 
 proxy:
-# server: https://qa-de-1-c67f19d507d543a3a9eaa3607729826f.kubernikus-v.qa-de-1.cloud.sap
-  clusterCIDR: 100.64.0.0/10
+# server: https://10.0.0.1
 
 parrot: {}
 # as: 12345
