--- a/system/kube-system-virtual/values.yaml
+++ b/system/kube-system-virtual/values.yaml
@@ -10,13 +10,13 @@ kube-proxy:
     proxy: 
       repository: sapcc/hyperkube
       tag: v1.15.2
-  proxy:
-    clusterCIDR: 10.180.0.0/17
+  clusterCIDR: 10.180.0.0/17
 
   sidecars:
     parrot:     false
     externalip: false
     nanny:      false
+    ipmasq:     false
 
 kube-flannel:
   enabled: true
