[neutron] adapt limits and request timeout for exporter

--- a/openstack/neutron/templates/vct-nsxv3-agent-deployment.yaml
+++ b/openstack/neutron/templates/vct-nsxv3-agent-deployment.yaml
@@ -112,6 +112,8 @@ template: |
               value: {= username | derive_password(hostname) | quote =}
             - name: NSXV3_REQUESTS_PER_SECOND
               value: "10"
+            - name: NSXV3_REQUEST_TIMEOUT_SECONDS
+              value: "30"
             - name: NSXV3_SUPPRESS_SSL_WORNINGS
               value: "true"
             - name: SCRAP_PORT
