--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -18,6 +18,9 @@ insecure_debug: false
 # run a db_sync to migrate the db schema ?
 run_db_migration: false
 
+# migrate postgres to mariadb - both database pods need to be up & running - be carefull!
+run_mariabdb_migration: false
+
 # ignore invalid role assignments
 skipRepairRoleAssignments: false
 
@@ -249,6 +252,8 @@ memcached:
 
 mariadb:
   enabled: false
+  # https://bugs.launchpad.net/keystone/+bug/1774688
+  image: mariadb:10.2
   name: keystone
   initdb_configmap: keystone-initdb
 
