[neutron] increase cpu limit for dhcp agents

--- a/openstack/neutron/templates/statefulset-network-agent.yaml
+++ b/openstack/neutron/templates/statefulset-network-agent.yaml
@@ -58,10 +58,10 @@ spec:
             privileged: true
           resources:
             requests:
-              cpu: "175m"
+              cpu: "256m"
               memory: "1Gi"
             limits:
-              cpu: "256m"
+              cpu: "2"
               memory: "2.5Gi"
           volumeMounts:
             - name: metadata-proxy
