--- a/openstack/keystone/templates/rbac-mariabdb-migration.yaml
+++ b/openstack/keystone/templates/rbac-mariabdb-migration.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.rbac.enabled .Values.run_mariabdb_migration }}
+{{- if and .Values.rbac.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
