--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -47,6 +47,19 @@ spec:
               value: {{ .Values.silences_update_timeout_sec | quote }}
             - name: ACKED_ALERTS_UPDATE_TIMEOUT_SEC
               value: {{ .Values.acked_alerts_update_timeout_sec | quote }}
+            - name: LDAP_ENDPOINT
+              value: {{ .Values.ldap_endpoint | quote }}  
+            - name: LDAP_USER_BASE
+              value: {{ .Values.ldap_user_base | quote }}  
+            - name: LDAP_BASE
+              value: {{ .Values.ldap_base | quote }}  
+            - name: LDAP_SERVICE_USER
+              value: {{ .Values.ldap_service_user | quote }}  
+            - name: LDAP_SERVICE_PASSWORD
+              value: {{ .Values.ldap_service_password | quote }}  
+            - name: TOKEN_PRIVATE_KEY
+              value: {{ .Values.ldap_private_key | quote }}                
+
           livenessProbe:
             httpGet:
               path: /system/liveliness
