--- a/openstack/keystone/templates/job-mariadb-migration-pre-upgrade.yaml
+++ b/openstack/keystone/templates/job-mariadb-migration-pre-upgrade.yaml
@@ -5,7 +5,7 @@ metadata:
   name: keystone-mariadb-migration-pre-upgrade-job
   annotations:
     "helm.sh/hook": "pre-upgrade"
-    "helm.sh/hook-delete-policy": "before-hook-creation"
+    "helm.sh/hook-delete-policy": "hook-succeeded, before-hook-creation"
     "helm.sh/hook-weight": "0"
   labels:
     app: {{ template "fullname" . }}
