supernova: fix deployment template

--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -58,7 +58,7 @@ spec:
             - name: LDAP_SERVICE_PASSWORD
               value: {{ .Values.ldap_service_password | quote }}  
             - name: TOKEN_PRIVATE_KEY
-              value: {{ .Values.ldap_private_key | quote }}                
+              value: {{ .Values.token_private_key | quote }}                
 
           livenessProbe:
             httpGet:
