--- a/common/mariadb/templates/deployment.yaml
+++ b/common/mariadb/templates/deployment.yaml
@@ -65,8 +65,10 @@ spec:
           - mountPath: /etc/mysql/conf.d/mariadb.cnf
             name: mariadb-etc
             subPath: mariadb.cnf
+{{- if .Values.initdb_configmap }}
           - name: initdb
             mountPath: /docker-entrypoint-initdb.d
+{{ end }}
 {{- if .Values.backup.enabled }}
           - name: db-socket
             mountPath: /var/run/mysqld
