--- a/system/prometheus-infra/templates/aggregations.yaml
+++ b/system/prometheus-infra/templates/aggregations.yaml
@@ -1,4 +1,4 @@
-i{{- $values := .Values }}
+{{- $values := .Values.aggregations }}
 {{- range $path, $bytes := .Files.Glob "aggregations/*.rules" }}
 ---
 apiVersion: monitoring.coreos.com/v1
@@ -12,5 +12,4 @@ metadata:
 
 spec:
 {{ printf "%s" $bytes | indent 2 }}
-
 {{- end }}
