fixed fullname typo

--- a/common/mariadb/templates/initdb-configmap.yaml
+++ b/common/mariadb/templates/initdb-configmap.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ .Values.name }}-initdb
   labels:
-    app: {{ template "fullname" . }}
+    app: {{ template "fullName" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
