added mariadb pvc names for chart V 0.1.2

--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -39,7 +39,8 @@ mariadb:
   enabled: true
   name: barbican
   initdb_configmap: barbican-initdb
-  persistence_claim: db-barbican-pvclaim
+  persistence_claim:
+    name: db-barbican-pvclaim
 
 mysql_metrics:
   db_name: barbican
