--- a/openstack/cinder/values.yaml
+++ b/openstack/cinder/values.yaml
@@ -56,7 +56,8 @@ mariadb:
   enabled: false
   name: cinder
   initdb_configmap: cinder-initdb
-  persistence_claim: db-cinder-pvclaim
+  persistence_claim:
+    name: db-cinder-pvclaim
 
 mysql_metrics:
   db_name: cinder
