--- a/openstack/designate/values.yaml
+++ b/openstack/designate/values.yaml
@@ -87,7 +87,8 @@ rndc_keys:
 mariadb:
   name: designate
   initdb_configmap: designate-initdb
-  persistence_claim: db-designate-pvclaim
+  persistence_claim:
+    name: db-designate-pvclaim
 
 rabbitmq:
   ## default: {{.Release.Name}}-rabbitmq.{{.Release.Namespace}}.svc.kubernetes.{{.Values.global.region}}.{{.Values.global.tld}}
