--- a/openstack/glance/values.yaml
+++ b/openstack/glance/values.yaml
@@ -106,7 +106,8 @@ mariadb:
   enabled: false
   name: glance
   initdb_configmap: glance-initdb
-  persistence_claim: db-glance-pvclaim
+  persistence_claim:
+    name: db-glance-pvclaim
 
 mysql_metrics:
   db_name: glance
