[neutron] update audit mapping for l7policies

--- a/openstack/neutron/templates/etc/_neutron_audit_map.yaml
+++ b/openstack/neutron/templates/etc/_neutron_audit_map.yaml
@@ -64,6 +64,7 @@ resources:
           members:
       l7policies:
         type_uri: network/loadbalancer/l7policies
+        el_type_uri: network/loadbalancer/l7policy
         children:
           rules:
   log:
