--- a/common/prometheus-alertmanager/templates/alertmanager.yaml
+++ b/common/prometheus-alertmanager/templates/alertmanager.yaml
@@ -12,6 +12,8 @@ spec:
 
   image: {{ include "alertmanager.image" . }}
 
+  logLevel: {{ required ".Values.logLevel missing" .Values.logLevel }}
+
   # The retention time of the Alertmanager.
   # Can only use s/m/h as unit. 168h = 7d.
   retention: {{ required ".Values.retention missing" .Values.retention }}
@@ -24,7 +26,7 @@ spec:
 
   # Mount additional configmaps from the same namespace.
   configMaps:
-    - notification-templates
+    - {{ include "alertmanager.fullname" . }}-notification-templates
   {{- if .Values.configMaps }}
 {{ toYaml .Values.configMaps | indent 4 }}
   {{- end }}
