--- a/common/prometheus-alertmanager/templates/configuration-secret.yaml
+++ b/common/prometheus-alertmanager/templates/configuration-secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 
 metadata:
-  name: {{ include "alertmanager.fullname" . }}
+  name: {{ include "alertmanager.fullname" . }}-configuration
   labels:
     app: prometheus-alertmanager
     alertmanager: {{ include "alertmanager.name" . }}
