--- a/common/prometheus-alertmanager/templates/nofification-templates-configmap.yaml
+++ b/common/prometheus-alertmanager/templates/nofification-templates-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 
 metadata:
-  name: notification-templates
+  name: {{ include "alertmanager.fullname" . }}-notification-templates
   labels:
     app: prometheus-alertmanager
     alertmanager: {{ include "alertmanager.name" . }}
