do not complain about newlines

--- a/ci/lintconf.yaml
+++ b/ci/lintconf.yaml
@@ -44,7 +44,7 @@ rules:
 
   key-duplicates: enable
   line-length: disable              # Lines can be any length.
-  new-line-at-end-of-file: enable
+  new-line-at-end-of-file: disable
   new-lines:
     type: unix
   trailing-spaces: disable
