--- a/common/mariadb/templates/initdb-configmap.yaml
+++ b/common/mariadb/templates/initdb-configmap.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.initdb_configmap }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -14,3 +15,4 @@ metadata:
 data:
   init.sh: |
 {{ include (print .Template.BasePath "/initdb/_init.sh.tpl") . | indent 4 }}
+{{- end }}
