make sure the pvc name has been specified

--- a/common/mariadb/templates/pvc.yaml
+++ b/common/mariadb/templates/pvc.yaml
@@ -2,7 +2,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ .Values.persistence_claim.name |  default (include "fullName" . ) }}
+  name: {{ required "Values.persistence_claim.name missing"  .Values.persistence_claim.name }}
 spec:
 {{- if .Values.persistence_claim.access_modes }}
   accessModes:
