[keystone] enable MariaDB

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -251,9 +251,12 @@ memcached:
       cpu: 500m
 
 mariadb:
-  enabled: false
+  enabled: true
   name: keystone
   initdb_configmap: keystone-initdb
+
+  persistence_claim:
+    name: db-keystone-pvclaim
 
 mysql_metrics:
   db_name: keystone
