--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -100,7 +100,8 @@ snmp_exporter:
   ipn:
     enabled: false
   asa:
-    snmpv3: false
+    snmpv3:
+      enabled: false
 
 bios_exporter:
   enabled: false
