fix typo in infra-monitoring helm chart

--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -121,10 +121,10 @@ vcenter_exporters:
 blackbox_exporter:
   enabled: false
 
-ping_expoter:
+ping_exporter:
   enabled: false
 
-vasa_expoter:
+vasa_exporter:
   enabled: false
 
 vcenter-log-alerts:
