--- a/common/prometheus-alertmanager/values.yaml
+++ b/common/prometheus-alertmanager/values.yaml
@@ -18,6 +18,9 @@ name:
 # 168h = 7 days.
 retention: 168h
 
+# AdditionalPeers allows injecting a set of additional Alertmanagers to peer with to form a highly available cluster.
+additionalPeers: []
+
 # Alertmanager configuration.
 # See https://prometheus.io/docs/alerting/configuration/#configuration-file .
 config: {}
