--- a/global/prometheus-alertmanager-operated/values.yaml
+++ b/global/prometheus-alertmanager-operated/values.yaml
@@ -5,6 +5,9 @@ global:
   # The TLD as used in the URL.
   domain:
 
+# Name of the Alertmanager instance. Used to deploy additional configuration via Secret.
+alertmanagerName: primary
+
 prometheus-alertmanager:
   # Name for this Alertmanager.
   name: primary
