--- a/common/prometheus-alertmanager/templates/alertmanager.yaml
+++ b/common/prometheus-alertmanager/templates/alertmanager.yaml
@@ -18,7 +18,7 @@ spec:
   # Can only use s/m/h as unit. 168h = 7d.
   retention: {{ required ".Values.retention missing" .Values.retention }}
 
-  {{- if .Values.additionalPeers }}
+  {{ if .Values.additionalPeers -}}
   # AdditionalPeers allows injecting a set of additional Alertmanagers to peer with to form a highly available cluster.
   additionalPeers:
 {{ toYaml .Values.additionalPeers | indent 4}}
