--- a/global/prometheus-alertmanager-operated/templates/configuration-secret.yaml
+++ b/global/prometheus-alertmanager-operated/templates/configuration-secret.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Secret
 
 metadata:
-  name: alertmanager-primary
+  name: alertmanager-{{ required ".Values.alertmanagerName missing" .Values.alertmanagerName }}
   labels:
     app: prometheus-alertmanager
-    alertmanager: primary
+    alertmanager: {{ required ".Values.alertmanagerName missing" .Values.alertmanagerName }}
 
 data:
   alertmanager.yaml: {{ include (print .Template.BasePath "/_alertmanager.yaml.tpl")  . | b64enc | quote }}
